<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EEEEEE"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.lenovo.myapplication2.MainActivity">

    <RelativeLayout
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#8BC374"
    android:gravity="center" >

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/Header"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/before_sgfilter"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/background_dark" />

            <TextView
                android:id="@+id/xdata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/background_dark" />

            <TextView
                android:id="@+id/ydata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/background_dark" />

            <TextView
                android:id="@+id/zdata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/background_dark" />

            <TextView
                android:id="@+id/magnitude_data_before"
                android:layout_width="wrap_content"
                android:layout_height="33sp"
                android:gravity="center_horizontal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary" />
        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/after_sgfilter"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/background_dark" />

            <TextView
                android:id="@+id/xdatasg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/background_dark" />

            <TextView
                android:id="@+id/ydatasg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/background_dark" />

            <TextView
                android:id="@+id/zdatasg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/background_dark" />

            <TextView
                android:id="@+id/magnitude_data_after"
                android:layout_width="wrap_content"
                android:layout_height="33sp"
                android:gravity="center_horizontal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDark" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?android:attr/selectableItemBackground"
        >

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:layout_marginBottom="4dip"
            android:layout_marginTop="4dip"/>


        <Button
            android:id="@+id/start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start"
            style="?android:attr/borderlessButtonStyle"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:layout_marginBottom="4dip"
            android:layout_marginTop="4dip"
            />

        <Button
            android:id="@+id/stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stop"
            style="?android:attr/borderlessButtonStyle"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:layout_marginBottom="4dip"
            android:layout_marginTop="4dip"/>

        <Button
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:onClick=""
            style="?android:attr/borderlessButtonStyle"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:layout_marginLeft="4dip"
            android:layout_marginRight="4dip"
            android:layout_marginBottom="4dip"
            android:layout_marginTop="4dip"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorPrimaryDark" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="33sp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0sp"
            android:layout_height="33sp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/scale2"
            android:textColor="@color/noise"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0sp"
            android:layout_height="33sp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/scale1"
            android:textStyle="bold"
            android:textColor="@color/sgfilter"
            android:textSize="14sp" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/saveMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_saving" />
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorPrimaryDark" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="380sp"
        android:layout_height="280sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorPrimaryDark" />



</LinearLayout>
</ScrollView>

